Turns out shuffle was not the way + Kobler comparison

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-PROJECT_NAME="SPDnet example"
-PROJECT_DESCRIPTION="Examples of using anotherspdnet with simple data"
-AUTHOR="Ammar Mian"
-CONTACT="ammar.mian@univ-smb.fr"
+export PROJECT_NAME="SPDnet example"
+export PROJECT_DESCRIPTION="Examples of using anotherspdnet with simple data"
+export AUTHOR="Ammar Mian"
+export CONTACT="ammar.mian@univ-smb.fr"
+export PYTHONPATH="$PYTHONPATH:/Users/ammarmian/research/second_order_deep/hugo"
